# libfilewatch

./: CMakeLists.txt
cmake/: cmake_uninstall.cmake.in  libfilewatchConfig.cmake.in
doc/: CODE_REVIEW_2026-04-06.md  DESIGN.md
examples/: example.cpp
include/filewatch/: Event.h  FileWatcher.h  LinuxBackend.h
src/: Event.cpp  FileWatcher.cpp
src/core/: FanotifyWatcher.cpp  InotifyWatcher.cpp  MacOSWatcher.cpp  PlatformWatcher.h  PlatformWatcherFactory.cpp  WindowsWatcher.cpp
src/utils/: EncodingUtils.cpp  EncodingUtils.h  PathUtils.cpp  PathUtils.h
test/: unit_test.cpp
